--- a/style.css
+++ b/style.css
@@ -2,3 +2,25 @@
   margin: 0;
   padding: 0;
 }
+
+.gameButton {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+}
+
+#green {
+  background: green;
+}
+
+#red {
+  background: red;
+}
+
+#blue {
+  background: blue;
+}
+
+#yellow {
+  background: yellow;
+}
