--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700');
+
 *, body {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
+h1 {
+  font-weight: 700;
+  font-size: 4em;
+}
+
+h5 {
+  margin-bottom: 30px;
+  font-size: 1.5em;
+}
+
+.container {
+  width: 30%;
+  margin: auto;
+}
 .gameButton {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   margin: 5px;
+  border-radius: 20px;
 }
 
 #green {
@@ -22,6 +40,10 @@
 }
 
 #yellow {
-  background: yellow;
+  background: rgb(216, 216, 20);
 }
 
+#counter, #message {
+  font-size: 2em;
+  margin: 10px 0;
+}
